Fix iOS status bar and dark mode background colors

--- a/OV_DB/OVDBFrontend/src/styles.scss
+++ b/OV_DB/OVDBFrontend/src/styles.scss
@@ -20,6 +20,10 @@ $OVDBFrontend-dark-theme: mat.define-theme((color: (theme-type: dark,
       )));
 
 html {
+  background: var(--mat-toolbar-container-background-color);
+}
+
+body {
   background: var(--mat-app-background-color);
 }
 
